# CEX-rust

./: .env.example  Cargo.toml  docker-compose.yml
crates/api/: Cargo.toml
crates/api/src/: main.rs  models.rs
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/balance/: Cargo.toml
crates/balance/src/: lib.rs
crates/benchmark/: Cargo.toml
crates/benchmark/src/: cancel_order.rs  client.rs  main.rs  match_order.rs  place_order.rs  stats.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs  market.rs  settlement.rs
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs
crates/exchange/: Cargo.toml
crates/exchange/src/: balance_actor.rs  lib.rs  market_actor.rs
crates/storage/: Cargo.toml
crates/storage/src/: balance_repository.rs  lib.rs  order_repository.rs  settlement_repository.rs  trade_repository.rs
migrations/: 20260628110538_create_balances.sql  20260628110906_create_orders.sql  20260628111017_create_trades.sql
