[workspace]
members = [
    "crates/domain",
    "crates/engine",
    "crates/app", 
    "crates/balance", 
    "crates/exchange", 
    "crates/api", 
    "crates/storage", "crates/benchmark",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"

sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "postgres",
] }
